@@ -1,6 +1,7 @@
           CHANGES IN SOUNDGEN VERSION 1.8.2.9000 [...date...]
 MINOR:
-  * spectrogram(): a new argument "extraContour" for plotting something over the spectrogram
+  * spectrogram(), analyze(), analyzeFolder(): a new argument "extraContour" for plotting something over the spectrogram
+  * spectrogram(): new arguments "from" and "to" for plotting a part of a long sound
 
 
           CHANGES IN SOUNDGEN VERSION 1.8.2 [17-October-2020]
